--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "@prismicio/client": "^4.0.0",
@@ -23,10 +24,18 @@
     "stripe": "^8.145.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.3.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/axios": "^0.14.0",
+    "@types/jest": "^27.0.1",
     "@types/next-auth": "^3.13.0",
     "@types/node": "^14.14.41",
     "@types/react": "^17.0.3",
+    "babel-jest": "^27.1.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.1.1",
+    "jest-dom": "^4.0.0",
     "typescript": "^4.2.4"
   }
 }
